Closed Bug 124258 Opened 23 years ago Closed 23 years ago

OS X, aqua/classic: Wrapping radio/checkboxes (Some Prefs panels don't fit)

Categories

(SeaMonkey :: Themes, defect)

PowerPC
macOS
defect
Not set
major

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.9

People

(Reporter: bugzilla, Assigned: bryner)

References

(Blocks 2 open bugs)

Details

(Keywords: platform-parity)

Attachments

(1 file)

i've noticed that with the aqua [classic] theme on mac os x, some of the prefs
panel content no longer fits.

btw, this bug covers only the "content won't fit" issue --and i'll list all the
instances i see [as of a 2002.02.06.08 comm build on 10.1.2] of this issue here,
rather than have a separate bug per panel! however: andreww, pls let me know if
any of this should go to another person, and i'll break out separate bugs as needed.

a. Appearance top-level panel is clipped at the bottom.

b. History panel: the "clear history" and "clear location bar" buttons look like
they've been ever-so-slightly clipped on the right side.

c. Mail & Newsgroups > Message Display panel is clipped at the bottom.

d. Privacy & Security > SSL panel is clipped at the bottom.

e. Debug top-level panel is clipped at the bottom.

f. Debug > Events panel is clipped at the bottom.

g. Offline & Disk Space panel is ever-so-slightly clipped at the bottom.
whups, forgot to assign this andreww.
Assignee: hewitt → andreww
Blocks: 80392, 114521
Keywords: nsbeta1
Summary: OS X: Some Prefs panels don't fit with the aqua [classic] theme → OS X, aqua/classic: Some Prefs panels don't fit
Status: NEW → ASSIGNED
taking this, as we have a patch (well, bryner does). giving it to him.
Assignee: andreww → bryner
Severity: normal → major
Status: ASSIGNED → NEW
Keywords: patch, pp
Summary: OS X, aqua/classic: Some Prefs panels don't fit → OS X, aqua/classic: Wrapping radio/checkboxes (Some Prefs panels don't fit)
Target Milestone: --- → mozilla0.9.9
Attached patch patchSplinter Review
Don't let the pref size be smaller than the CSS-specified min size.
pinkerton, can you r=?
Status: NEW → ASSIGNED
Comment on attachment 69359 [details] [diff] [review]
patch

r=pink

we should file a bug for the sprocket layout that it gets so confused when this
situation arises
Attachment #69359 - Flags: review+
checked in.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
vrfy'd fixed with 2002.02.14.08 comm bits on 10.1.2.

the only exception is trivial: case (b) is still there, where the buttons are
barely clipped on the right side... but verifying this bug as this is great
improvement.
Status: RESOLVED → VERIFIED
Blocks: prefsfit
No longer blocks: 80392
Product: Core → SeaMonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: