Bug 124258 - radio buttons and checkboxes not sizing wide enough for their labels.  Make sure the pref size we return for the image isn't smaller than the min size specified in CSS.  r=pinkerton, rs=hyatt.